--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: php
 
 php:
   - 5.6
-  - 7.0
-  - 7.1
-  - hhvm
+  #- 7.0
+  #- 7.1
+  #- hhvm
 
 #sudo: required
 #dist: trusty
@@ -17,8 +17,6 @@ addons:
   
 before_script:
   - if [[ "$TRAVIS_PHP_VERSION" == "5.6" ]]; then phpenv config-add travis.php.ini; fi
-  - if [[ "$TRAVIS_PHP_VERSION" == "7.0" ]]; then phpenv config-add travis.php.ini; fi
-  - if [[ "$TRAVIS_PHP_VERSION" == "7.1" ]]; then phpenv config-add travis.php.ini; fi
   - echo -e '\nhhvm.libxml.ext_entity_whitelist = "file,http,https"' | sudo tee -a /etc/hhvm/php.ini
   - echo -e '\nhhvm.enable_zend_compat=true' | sudo tee -a /etc/hhvm/php.ini
   - echo -e '\ndate.timezone = "Europe/Rome"' | sudo tee -a /etc/hhvm/php.ini
