--- a/src/Fi/CoreBundle/Resources/config/services.yml
+++ b/src/Fi/CoreBundle/Resources/config/services.yml
@@ -44,13 +44,13 @@ services:
             
     ficorebundle.tblprefix_subscriber:
         class: Fi\CoreBundle\Subscriber\TablePrefixSubscriber
-        arguments: [%ficorebundle.db.table_prefix%]
+        arguments: ["%ficorebundle.db.table_prefix%"]
         tags:
             - { name: doctrine.event_subscriber }
             
     ficorebundle.tblschema_subscriber:
         class: Fi\CoreBundle\Subscriber\TableSchemaSubscriber
-        arguments: [%ficorebundle.db.table_schema%]
+        arguments: ["%ficorebundle.db.table_schema%"]
         tags:
             - { name: doctrine.event_subscriber }
 
