--- a/.travis.yml
+++ b/.travis.yml
@@ -29,15 +29,19 @@ before_script:
   - php app/console fifree2:install admin admin admin@admin.it --env=test
   - php app/console server:start --env=test
   - sh vendor/bin/selenium-server-standalone > /dev/null 2>&1 &
-  #- rm -rf app/cache/test
-  #- rm -rf app/cache/dev
-  #- mkdir app/Resources
-  #- chmod 777 -R app/cache app/logs 
-  #- chmod 777 src/ src/Fi app/Resources app/AppKernel.php app/config/routing.yml
-  #- php app/console cache:clear --env=test
-  #- php app/console cache:warmup --env=test
-  #- php -i | grep timezone
-  #- php -i | grep ini
+
+  - sudo apt-get update
+  - sudo apt-get install apache2 libapache2-mod-fastcgi
+  # enable php-fpm
+  - sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
+  - sudo a2enmod rewrite actions fastcgi alias
+  - echo "cgi.fix_pathinfo = 1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - ~/.phpenv/versions/$(phpenv version-name)/sbin/php-fpm
+  # configure apache virtual hosts
+  - sudo cp -f testvhost.conf /etc/apache2/sites-available/default
+  - sudo sed -e "s?%TRAVIS_BUILD_DIR%?$(pwd)?g" --in-place /etc/apache2/sites-available/default
+  - sudo service apache2 restart
+  - 
 
 script:
   - ant
