--- a/testvhost.conf
+++ b/testvhost.conf
@@ -1,13 +1,39 @@
-<VirtualHost *:80>
+<VirtualHost *:8000>
   # [...]
 
   DocumentRoot %TRAVIS_BUILD_DIR%/web
 
   <Directory "%TRAVIS_BUILD_DIR%/web">
     Options FollowSymLinks MultiViews ExecCGI
-    AllowOverride All
-    Order deny,allow
-    Allow from all
+        AllowOverride None
+        Order Allow,Deny
+        Allow from All
+        Require all granted
+		
+        <IfModule mod_rewrite.c>
+            Options -MultiViews
+            RewriteEngine On
+            RewriteCond %{REQUEST_FILENAME} !-f
+            RewriteRule ^(.*)$ app.php [QSA,L]
+        </IfModule>
+    </Directory>
+
+    # uncomment the following lines if you install assets as symlinks
+    # or run into problems when compiling LESS/Sass/CoffeScript assets
+    # <Directory /src/php/gestionespesefamiliari>
+    #     Options FollowSymlinks
+    # </Directory>
+
+    # optionally disable the RewriteEngine for the asset directories
+    # which will allow apache to simply reply with a 404 when files are
+    # not found instead of passing the request into the full symfony stack
+    <Directory  "%TRAVIS_BUILD_DIR%/web/bundles">
+        <IfModule mod_rewrite.c>
+            RewriteEngine Off
+        </IfModule>
+    </Directory>
+    #ErrorLog /var/log/apache2/project_error.log
+    #CustomLog /var/log/apache2/project_access.log combined
   </Directory>
 
   # Wire up Apache to use Travis CI's php-fpm.
@@ -15,7 +41,7 @@
     AddHandler php5-fcgi .php
     Action php5-fcgi /php5-fcgi
     Alias /php5-fcgi /usr/lib/cgi-bin/php5-fcgi
-    FastCgiExternalServer /usr/lib/cgi-bin/php5-fcgi -host 127.0.0.1:8000 -pass-header Authorization
+    FastCgiExternalServer /usr/lib/cgi-bin/php5-fcgi -host 127.0.0.1:9000 -pass-header Authorization
   </IfModule>
 
   # [...]
