--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ before_script:
   - sudo cp -f ./testvhost.conf /etc/apache2/sites-available/default
   - sudo sed -e "s?%TRAVIS_BUILD_DIR%?$(pwd)?g" --in-place /etc/apache2/sites-available/default
   - sudo service apache2 restart
-  - wget http://localhost/
+  - wget http://localhost:8000/
   
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
