--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ before_script:
   - sudo sed -i 's/Listen 80/Listen \*:8000/' /etc/apache2/ports.conf
   #- sed -i "/Listen \*:8000/a NameVirtualHost \*:8000" /etc/apache2/ports.conf
   - sudo service apache2 restart
-  - wget http://localhost:8000/
+  #- wget http://localhost:8000/
   
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
