--- a/testvhost.conf
+++ b/testvhost.conf
@@ -1,15 +1,13 @@
 <VirtualHost *:8000>
   # [...]
+    DocumentRoot %TRAVIS_BUILD_DIR%/web
 
-  DocumentRoot %TRAVIS_BUILD_DIR%/web
+    <Directory "%TRAVIS_BUILD_DIR%/web">
+    AllowOverride None
+    Order Allow,Deny
+    Allow from All
+    #Require all granted
 
-  <Directory "%TRAVIS_BUILD_DIR%/web">
-    Options FollowSymLinks MultiViews ExecCGI
-        AllowOverride None
-        Order Allow,Deny
-        Allow from All
-        Require all granted
-		
         <IfModule mod_rewrite.c>
             Options -MultiViews
             RewriteEngine On
@@ -36,12 +34,11 @@
     #CustomLog /var/log/apache2/project_access.log combined
 
   # Wire up Apache to use Travis CI's php-fpm.
-  #<IfModule mod_fastcgi.c>
-  #  AddHandler php5-fcgi .php
-  #  Action php5-fcgi /php5-fcgi
-  #  Alias /php5-fcgi /usr/lib/cgi-bin/php5-fcgi
-  #  FastCgiExternalServer /usr/lib/cgi-bin/php5-fcgi -host 127.0.0.1:9000 -pass-header Authorization
-  #</IfModule>
+  <IfModule mod_fastcgi.c>
+    AddHandler php5-fcgi .php
+    Action php5-fcgi /php5-fcgi
+    Alias /php5-fcgi /usr/lib/cgi-bin/php5-fcgi
+    FastCgiExternalServer /usr/lib/cgi-bin/php5-fcgi -host 127.0.0.1:9000 -pass-header Authorization
+  </IfModule>
 
-  # [...]
 </VirtualHost>
