--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,12 @@ before_script:
   
   - sudo apt-get update
   - sudo apt-get install apache2 libapache2-mod-fastcgi
+  
+  - sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
+  - sudo a2enmod rewrite actions fastcgi alias
+  - echo "cgi.fix_pathinfo = 1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - ~/.phpenv/versions/$(phpenv version-name)/sbin/php-fpm
+  
   # enable php-fpm
   #- if [[ "$TRAVIS_PHP_VERSION" == "5.6" ]]; then sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
   #- if [[ "$TRAVIS_PHP_VERSION" == "7.0" ]]; then cp Tests/build/www.conf ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/; fi
