--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
   - 5.6
   - 7.0
   #- 7.1
-  #- hhvm
+  - hhvm
 
 #sudo: required
 #dist: trusty
@@ -12,8 +12,8 @@ cache:
   directories:
     - $HOME/.composer/cache
     
-#addons:
-#  firefox: "latest-esr"
+addons:
+  firefox: "latest-esr"
   
 before_script:
   - if [[ "$TRAVIS_PHP_VERSION" == "5.6" ]]; then phpenv config-add ./tests/build/travis.php.ini; fi
