--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ php:
   #- 7.1
   - hhvm
 
+# Configure different DB environments
+env:
+  - DB=mysql
+  - DB=pgsql
+  - DB=sqlite3
+  
 #sudo: required
 #dist: trusty
 cache:
@@ -24,7 +30,8 @@ before_script:
   - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then echo 'date.timezone = "Europe/Rome"' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi
   
   - sudo apt-get update
-  - sudo apt-get install apache2 libapache2-mod-fastcgi
+  - sudo apt-get install apache2 libapache2-mod-fastcgi make
+  - sudo apt-get install -y --force-yes php5-dev php-pear php5-mysql php5-curl php5-gd php5-json php5-sqlite php5-pgsql
   
   #- if [[ $TRAVIS_PHP_VERSION == "5.6" ]]; then sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
   - sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
@@ -48,6 +55,20 @@ before_script:
   #- sed -i "/Listen \*:8000/a NameVirtualHost \*:8000" /etc/apache2/ports.conf
   - sudo service apache2 restart
   #- wget http://localhost:8000/
+
+  - if [[ "$DB" == "pgsql" ]]; then echo "PROVISIONING WITH PostgreSQL"; fi
+  - if [[ "$DB" == "pgsql" ]]; then sudo cp -f ./tests/build/parameters.pgsql.yml $TRAVIS_BUILD_DIR/app/config/parameters.yml; fi
+  - if [[ "$DB" == "pgsql" ]]; then psql -c 'create database unittest;' -U postgres; fi
+  - if [[ "$DB" == "pgsql" ]]; then psql -d unittest -c '\dt;' -U postgres; fi
+  
+  - if [[ "$DB" == "mysql" ]]; then echo "PROVISIONING WITH MySQL"; fi
+  - if [[ "$DB" == "pgsql" ]]; then sudo cp -f ./tests/build/parameters.mysql.yml $TRAVIS_BUILD_DIR/app/config/parameters.yml; fi
+  - if [[ "$DB" == "mysql" ]]; then mysql --version; fi
+  - if [[ "$DB" == "mysql" ]]; then mysql -e "CREATE DATABASE unittest;" -uroot; fi
+  - if [[ "$DB" == "mysql" ]]; then mysql -e "GRANT ALL ON unittest.* TO 'travis'@'127.0.0.1';" -uroot; fi
+  
+  - if [[ "$DB" == "sqlite3" ]]; then echo "PROVISIONING WITH Sqlite3"; fi
+  - if [[ "$DB" == "sqlite3" ]]; then sudo cp -f ./tests/build/parameters.sqlite.yml $TRAVIS_BUILD_DIR/app/config/parameters.yml; fi
   
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
