--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: php
 
 php:
-  - 5.5
   - 5.6
   - 7.0
   #- 7.1
-  #- hhvm
-
+  - hhvm
+  
+matrix:
+    allow_failures:
+        - php: hhvm
+        
 # Configure different DB environments
 env:
   - DB=mysql
@@ -75,6 +78,11 @@ after_success:
   - rm app/dbtest.sqlite
   - php app/console server:stop --env=test
   - pkill java
+
+after_failure:
+  - sudo cat /var/log/apache2/error.log
+  - sudo cat /var/log/apache2/access.log
+  - sudo cat /var/log/apache2/other_vhosts_access.log
 
 notifications:
   email:
