--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,13 @@ language: php
 php:
   - 5.6
   - 7.0
-  #- 7.1
+  - 7.1
   - hhvm
   
 matrix:
     allow_failures:
         - php: hhvm
+        - php: 7.1
         
 # Configure different DB environments
 env:
