--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,10 @@ matrix:
     allow_failures:
         - php: hhvm
         - php: 7.1
-        
+    exclude:
+    - php: hhvm
+      env: DB=pgsql
+
 # Configure different DB environments
 env:
   - DB=mysql
@@ -23,8 +26,8 @@ cache:
   directories:
     - $HOME/.composer/cache
     
-#addons:
-#  firefox: "latest-esr"
+addons:
+  firefox: "latest-esr"
   
 before_script:
   - if [[ "$TRAVIS_PHP_VERSION" == "5.6" ]]; then phpenv config-add ./tests/build/travis.php.ini; fi
