--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,13 @@ language: php
 php:
   - 5.6
   - 7.0
-  - 7.1
+  #- 7.1
   - hhvm
   
 matrix:
     allow_failures:
         - php: hhvm
-        - php: 7.1
+    #    - php: 7.1
     exclude:
     - php: hhvm
       env: DB=pgsql
@@ -31,10 +31,10 @@ addons:
   
 before_script:
   - if [[ "$TRAVIS_PHP_VERSION" == "5.6" ]]; then phpenv config-add ./tests/build/travis.php.ini; fi
-  - echo -e '\nhhvm.libxml.ext_entity_whitelist = "file,http,https"' | sudo tee -a /etc/hhvm/php.ini
-  - echo -e '\nhhvm.enable_zend_compat=true' | sudo tee -a /etc/hhvm/php.ini
-  - echo -e '\ndate.timezone = "Europe/Rome"' | sudo tee -a /etc/hhvm/php.ini
-  - echo -e '\nhhvm.enable_hip_hop_syntax = true' | sudo tee -a /etc/hhvm/php.ini
+  - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then echo -e '\nhhvm.libxml.ext_entity_whitelist = "file,http,https"' | sudo tee -a /etc/hhvm/php.ini; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then echo -e '\nhhvm.enable_zend_compat=true' | sudo tee -a /etc/hhvm/php.ini; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then echo -e '\ndate.timezone = "Europe/Rome"' | sudo tee -a /etc/hhvm/php.ini; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then echo -e '\nhhvm.enable_hip_hop_syntax = true' | sudo tee -a /etc/hhvm/php.ini; fi
   - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then echo 'date.timezone = "Europe/Rome"' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi
   - sudo apt-get update
   - sudo apt-get install apache2 libapache2-mod-fastcgi make
