--- a/.travis.yml
+++ b/.travis.yml
@@ -78,7 +78,7 @@ script:
   - if [[ "$TRAVIS_PHP_VERSION" == "5.6" ]]; then ant; fi
   - if [[ "$TRAVIS_PHP_VERSION" == "7.0" ]]; then ant; fi
   - if [[ "$TRAVIS_PHP_VERSION" == "7.1" ]]; then ant; fi
-  - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then vendor/bin/phpunit --filter FiUtilitaTest --filter OperatoriCommandTest --filter PannelloAmministrazioneTest; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then vendor/bin/phpunit --filter FiUtilitaTest --filter OperatoriCommandTest --filter PannelloAmministrazioneTest --filter ArrayFunctionsTestCase; fi
 
 after_success:
   - if [[ "$TRAVIS_PHP_VERSION" == "5.6" ]]; then php vendor/satooshi/php-coveralls/bin/coveralls -v; fi
