--- a/composer.json
+++ b/composer.json
@@ -64,13 +64,13 @@
         "sensio/generator-bundle": "~3.0",
         "fi/mysql-workbench-schema-exporter": "^3.0",
         "fi/doctrine2-exporter": "^3.0",
-        "behat/behat": "3.0.*",
-        "behat/mink-selenium2-driver": "1.2.*",
-        "behat/symfony2-extension": "2.0.*",
+        "behat/behat": "^3.0",
+        "behat/mink-selenium2-driver": "^1.3",
+        "behat/symfony2-extension": "^2.0",
         "behat/mink-browserkit-driver": "^1.3",
         "behat/mink-extension": "^2.2",
-        "behat/mink-goutte-driver": "~1.1",
-        "se/selenium-server-standalone": "^2.53",
+        "behat/mink-goutte-driver": "^1.2",
+        "se/selenium-server-standalone": "^3.0",
         "phpunit/phpunit": "^5.5"
     },
     "scripts": {
