--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -21,6 +21,7 @@
     </testsuites>
     <php>
         <server name="KERNEL_DIR" value="app/" />
+        <env name="BOOTSTRAP_CLEAR_CACHE_ENV" value="test"/>
     </php>
 
     <filter>
