--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,8 @@
         "behat/mink-extension": "^2.2",
         "behat/mink-goutte-driver": "^1.2",
         "se/selenium-server-standalone": "^2.0",
-        "phpunit/phpunit": "^5.5"
+        "phpunit/phpunit": "^5.5",
+        "symfony/web-server-bundle": "v3.4.0-BETA2"
     },
     "scripts": {
         "symfony-scripts": [
