--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -9,6 +9,7 @@ auxiliary.org-netbeans-modules-php-phpunit.phpUnit_2e_enabled=false
 auxiliary.org-netbeans-modules-php-phpunit.phpUnit_2e_path=
 auxiliary.org-netbeans-modules-php-phpunit.test_2e_groups_2e_ask=false
 auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_all=false
+auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_phpunit_2e_only=false
 auxiliary.org-netbeans-modules-php-smarty.smarty-framework=true
 include.path=${php.global.include.path}
 php.version=PHP_56
@@ -18,4 +19,4 @@ tags.asp=false
 tags.short=false
 test.src.dir=app
 testing.providers=PhpUnit
-web.root=web
+web.root=.
