--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -14,6 +14,8 @@ security:
             id: fos_user.user_provider.username
             
     firewalls:
+    
+        
         sso_esclusioni:
             pattern:  ^/(_(profiler|wdt)|css|images|js|accedi)/
             security: false
@@ -26,16 +28,18 @@ security:
           form_login:
               provider: fos_userbundle
               csrf_token_generator: security.csrf.token_manager 
-              #Usare form.csrf_provider invece di security.csrf.token_manager per versioni di Symfony <2.4
-
+              
+          
           logout:       true
           anonymous:    true
+          logout_on_user_change: true
           
         secured_area:
             #cambiare il pattern per abilitare/disabilitare la sicurezza su tutto il progetto
             pattern:    ^/
             http_basic:
                 realm: "Area protetta"
+                
     access_control:
         - { path: ^/(_(profiler|wdt)|css|images|js|accedi), roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
