--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "autoload": {
         "psr-4": {
             "Fi\\CoreBundle\\": "src/Fi/CoreBundle",
+            "Fi\\PannelloAmministrazioneBundle\\": "src/Fi/PannelloAmministrazioneBundle",
             "Fi\\ProvaBundle\\": "src/Fi/ProvaBundle"
         },
         "classmap": [
@@ -46,10 +47,11 @@
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "twig/twig": "^1.3",
+        "twig/twig": "~1.6",
         "friendsofsymfony/user-bundle": "~2.0",
         "fi/osbundle": "~2.0",
-        "fi/pannelloamministrazionebundle": "~2.0",
+        "mysql-workbench-schema-exporter/mysql-workbench-schema-exporter": "^3.0",
+        "mysql-workbench-schema-exporter/doctrine2-exporter": "^3.0",
         "tecnickcom/tcpdf": "^6.2",
         "phpoffice/phpexcel": "^1.8",
         "phpoffice/phpword": "^0.13.0"
@@ -69,6 +71,7 @@
         "behat/mink-browserkit-driver": "^1.3",
         "behat/mink-extension": "^2.2",
         "behat/mink-goutte-driver": "^1.2",
+        "symfony/web-profiler-bundle": "^3.3",
         "se/selenium-server-standalone": "^2.0",
         "phpunit/phpunit": "^5.5",
         "symfony/web-server-bundle": "v3.4.0-BETA2"
