--- a/.travis.yml
+++ b/.travis.yml
@@ -44,9 +44,11 @@ before_script:
   - if [[ $TRAVIS_PHP_VERSION == "7.1" ]]; then sudo cp ./tests/build/www.conf ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/; fi
   - sudo a2enmod rewrite actions fastcgi alias
   - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then echo "cgi.fix_pathinfo = 1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini; fi
+  - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then sudo sed -i -e "s,www-data,travis,g" /etc/apache2/envvars; fi
+  - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then sudo chown -R travis:travis /var/lib/apache2/fastcgi; fi
   - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then ~/.phpenv/versions/$(phpenv version-name)/sbin/php-fpm; fi
-  - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then sudo cp -f ./tests/build/testvhost.conf /etc/apache2/sites-available/default; fi
-  - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then sudo sed -e "s?%TRAVIS_BUILD_DIR%?$(pwd)?g" --in-place /etc/apache2/sites-available/default; fi
+  - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then sudo cp -f ./tests/build/testvhost.conf /etc/apache2/sites-available/000-default; fi
+  - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then sudo sed -e "s?%TRAVIS_BUILD_DIR%?$(pwd)?g" --in-place /etc/apache2/sites-available/000-default; fi
   - sudo sed -i 's/Listen 80/Listen 8000/' /etc/apache2/ports.conf
   - sudo sed -i 's/NameVirtualHost \*:80/NameVirtualHost \*:8000/' /etc/apache2/ports.conf
   - sudo service apache2 restart
