--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -14,47 +14,48 @@ security:
             id: fos_user.user_provider.username
             
     firewalls:
-    
-        
         sso_esclusioni:
             pattern:  ^/(_(profiler|wdt)|css|images|js|accedi)/
             security: false
+            logout_on_user_change: true
             
         sso_login:
             pattern:  ^/autenticazione/*
             security: false
+            logout_on_user_change: true
+            
         main:
           pattern: ^/
           form_login:
               provider: fos_userbundle
               csrf_token_generator: security.csrf.token_manager 
               
-          
+          logout_on_user_change: true
           logout:       true
           anonymous:    true
-          logout_on_user_change: true
           
         secured_area:
             #cambiare il pattern per abilitare/disabilitare la sicurezza su tutto il progetto
             pattern:    ^/
             http_basic:
                 realm: "Area protetta"
-                
+            logout_on_user_change: true
+        
     access_control:
         - { path: ^/(_(profiler|wdt)|css|images|js|accedi), roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
-        - { path: ^/operatori/, role: ROLE_ADMIN }
-        - { path: ^/ruoli/, role: ROLE_ADMIN }
-        - { path: ^/permessi/, role: ROLE_ADMIN }
-        - { path: ^/menuApplicazione/, role: ROLE_ADMIN }
-        - { path: ^/opzioniTabella/, role: ROLE_ADMIN }
-        - { path: ^/tabelle/aggiorna, role: ROLE_ADMIN }
-        - { path: ^/tabelle/edit, role: ROLE_ADMIN }
-        - { path: ^/tabelle/new, role: ROLE_ADMIN }
-        - { path: ^/tabelle/delete, role: ROLE_ADMIN }
+        - { path: ^/Operatori/, role: ROLE_ADMIN }
+        - { path: ^/Ruoli/, role: ROLE_ADMIN }
+        - { path: ^/Permessi/, role: ROLE_ADMIN }
+        - { path: ^/MenuApplicazione/, role: ROLE_ADMIN }
+        - { path: ^/OpzioniTabella/, role: ROLE_ADMIN }
+        - { path: ^/Tabelle/aggiorna, role: ROLE_ADMIN }
+        - { path: ^/Tabelle/edit, role: ROLE_ADMIN }
+        - { path: ^/Tabelle/new, role: ROLE_ADMIN }
+        - { path: ^/Tabelle/delete, role: ROLE_ADMIN }
         - { path: ^/adminpanel, role: [ROLE_ADMIN] }
         
         #Con questa configurazione se l'utente non è censito in SSO oppure non ha ruoli in FOS VIENE BLOCCATO CON Error 403
