--- a/composer.json
+++ b/composer.json
@@ -35,19 +35,23 @@
         "classmap": [
             "app/AppKernel.php",
             "app/AppCache.php"
+        ],
+        "files": [
+            "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php"
         ]
     },
     "require": {
         "php": ">=5.6.0",
         "symfony/symfony": "3.4.0-BETA2 as 3.4.0",
-        "doctrine/orm": "^2.5",
-        "doctrine/doctrine-bundle": "^1.6",
         "symfony/swiftmailer-bundle": "^2.4",
-        "symfony/monolog-bundle": "^3.0",
+        "symfony/monolog-bundle": "^3.1.0",
+        "symfony/polyfill-apcu": "^1.0",
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
+        "doctrine/orm": "^2.5",
+        "doctrine/doctrine-bundle": "^1.6",
         "incenteev/composer-parameter-handler": "^2.0",
-        "twig/twig": "~1.6",
+        "twig/twig": "^1.0||^2.0",
         "friendsofsymfony/user-bundle": "~2.0",
         "fi/osbundle": "~2.0",
         "mysql-workbench-schema-exporter/mysql-workbench-schema-exporter": "^3.0",
@@ -55,10 +59,9 @@
         "tecnickcom/tcpdf": "^6.2",
         "phpoffice/phpexcel": "^1.8",
         "phpoffice/phpword": "^0.13.0"
-        
     },
     "require-dev": {
-        "sensio/generator-bundle": "~3.0",
+        "sensio/generator-bundle": "^3.0",
         "sensiolabs/security-checker": "^3.0",
         "satooshi/php-coveralls": "^1.0",
         "squizlabs/php_codesniffer": "^2.7",
@@ -72,6 +75,7 @@
         "behat/mink-extension": "^2.2",
         "behat/mink-goutte-driver": "^1.2",
         "symfony/web-profiler-bundle": "^3.3",
+        "symfony/phpunit-bridge": "^3.0",
         "se/selenium-server-standalone": "^2.0",
         "phpunit/phpunit": "^5.5",
         "symfony/web-server-bundle": "v3.4.0-BETA2"
