--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+fi_prova:
+    resource: "@FiProvaBundle/Resources/config/routing.yml"
+    prefix:   /
+
 fi_pannello_amministrazione:
     resource: "@PannelloAmministrazioneBundle/Resources/config/routing.yml"
     prefix:   /
