--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -12,11 +12,11 @@ auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_all=false
 auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_phpunit_2e_only=false
 auxiliary.org-netbeans-modules-php-smarty.smarty-framework=true
 include.path=${php.global.include.path}
-php.version=PHP_56
+php.version=PHP_70
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=false
 test.src.dir=app
 testing.providers=PhpUnit
-web.root=.
+web.root=web
