upgrade symfony 3.4 + migliorati test

--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -14,3 +14,7 @@ web_profiler:
 
 swiftmailer:
     disable_delivery: true
+
+parameters:
+    user4test: admin
+    usernoprivileges4test: user4test
