upgrade symfony 3.4 + php 7.2

--- a/src/Fi/CoreBundle/Resources/config/services.yml
+++ b/src/Fi/CoreBundle/Resources/config/services.yml
@@ -133,3 +133,7 @@ services:
         alias: fos_user.user_manager
         public: true
             
+    fifree.fos_user.util.user_manipulator:
+        alias: fos_user.util.user_manipulator
+        public: true
+            
