--- a/build.xml
+++ b/build.xml
@@ -33,7 +33,7 @@
 
     <target name="composer-run-install" depends="composer-update">
         <exec executable="php" failonerror="true">
-            <arg line="composer.phar install --dev --prefer-source"/>
+            <arg line="composer.phar install"/>
         </exec>
     </target>
 
@@ -77,9 +77,10 @@
     </target>
 
     <target name="php-security-checker" description="Check your composer dependencies for insecure components">
-        <exec executable="vendor/bin/security-checker" failonerror="false">
+        <exec executable="vendor/bin/security-checker" failonerror="true">
             <arg value="security:check"/>
             <arg value="--verbose"/>
+            <arg value="--end-point=http://security.sensiolabs.org/check_lock"/>            
             <arg value="composer.lock"/>
         </exec>
     </target>
