--- a/build.xml
+++ b/build.xml
@@ -130,13 +130,13 @@
     </target>
 
     <target name="phpunit" description="Run unit tests with PHPUnit">
-        <exec executable="vendor/bin/phpunit" failonerror="true">
+        <exec executable="vendor/bin/simple-phpunit" failonerror="true">
             <arg line="--configuration=${basedir}"/>
         </exec>
     </target>
 
     <target name="phpunit-ci" description="Run unit tests with PHPUnit">
-        <exec executable="vendor/bin/phpunit" failonerror="true">
+        <exec executable="vendor/bin/simple-phpunit" failonerror="true">
             <arg line="--configuration=${basedir}"/>
             <arg line="--coverage-clover=${basedir}/build/artifacts/coverage/clover.xml"/>
         </exec>
