--- a/composer.json
+++ b/composer.json
@@ -35,50 +35,53 @@
         "classmap": [
             "app/AppKernel.php",
             "app/AppCache.php"
-        ],
+        ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        },
         "files": [
             "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php"
         ]
     },
     "require": {
         "php": ">=5.6.0",
-        "symfony/symfony": "3.4.*",
-        "symfony/monolog-bundle": "^3.1.0",
-        "symfony/polyfill-apcu": "^1.0",
-        "sensio/distribution-bundle": "~5.0",
-        "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "fi/osbundle": "~2.0",
+        "incenteev/composer-parameter-handler": "^2.0",
+        "sensio/distribution-bundle": "~5.0",
+        "sensio/framework-extra-bundle": "^5.0.0",
+        "symfony/swiftmailer-bundle": "^2.4",
+        "symfony/monolog-bundle": "^3.1.0",
+        "symfony/polyfill-apcu": "^1.0",
+        "symfony/symfony": "3.4.*",
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
-        "symfony/web-server-bundle": "3.4.*",
-        "symfony/web-profiler-bundle": "^3.3",
-        "symfony/phpunit-bridge": "^3.0",
-        "sensio/generator-bundle": "^3.0",
-        "sensiolabs/security-checker": "^4.0",
-        "friendsofsymfony/user-bundle": "~2.0",
-        "mysql-workbench-schema-exporter/doctrine2-exporter": "^3.0",
-        "mysql-workbench-schema-exporter/mysql-workbench-schema-exporter": "^3.0",
-        "symfony/swiftmailer-bundle": "^2.4",
-        "phpoffice/phpexcel": "^1.8",
-        "phpoffice/phpword": "^0.13.0",
-        "fi/tcpdf": "^6.2",
-        "mockery/mockery": "^0.9.5",
         "behat/behat": "^3.0",
-        "behat/mink-selenium2-driver": "^1.3",
-        "behat/symfony2-extension": "^2.0",
         "behat/mink-browserkit-driver": "^1.3",
         "behat/mink-extension": "^2.2",
         "behat/mink-goutte-driver": "^1.2",
-        "se/selenium-server-standalone": "^2.0",
-        "satooshi/php-coveralls": "^1.0",
-        "squizlabs/php_codesniffer": "^2.7",
+        "behat/mink-selenium2-driver": "^1.3",
+        "behat/symfony2-extension": "^2.0",
+        "friendsofsymfony/user-bundle": "~2.0",
+        "mockery/mockery": "^0.9.5",
+        "mysql-workbench-schema-exporter/doctrine2-exporter": "^3.0",
+        "mysql-workbench-schema-exporter/mysql-workbench-schema-exporter": "^3.0",
         "phpmd/phpmd": "^2.4",
+        "phpoffice/phpexcel": "^1.8",
+        "phpoffice/phpword": "^0.13.0",
+        "satooshi/php-coveralls": "^1.0",
+        "se/selenium-server-standalone": "^2.0",
         "sebastian/phpcpd": "^2.0",
-        "phpunit/phpunit": "^5.5"
+        "sensio/generator-bundle": "^3.0",
+        "sensiolabs/security-checker": "^4.0",
+        "squizlabs/php_codesniffer": "^2.7",
+        "symfony/phpunit-bridge": "dev-master",
+        "symfony/web-server-bundle": "3.4.*",
+        "tecnickcom/tcpdf": "^6.2"
     },
     "scripts": {
         "symfony-scripts": [
@@ -111,7 +114,7 @@
             "keep-outdated": true
         },
         "branch-alias": {
-            "dev-master": "3.0.x-dev"
+            "dev-master": "dev-3.x"
         }
     }
 }
