--- a/composer.json
+++ b/composer.json
@@ -91,7 +91,7 @@
             "keep-outdated": true
         },
         "branch-alias": {
-            "dev-master": "2.0.x-dev"
+            "dev-master": "2.0-dev"
         }
     }
 }
