--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,8 @@
 /vendor/
 app/dbtest.sqlite
 composer.lock
+
+tests/var/cache/*
+tests/var/logs/*
+tests/app/dbtest.sqlite
+tests/app/bootstrap.php.cache
