--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -11,12 +11,13 @@ auxiliary.org-netbeans-modules-php-phpunit.test_2e_groups_2e_ask=false
 auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_all=false
 auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_phpunit_2e_only=false
 auxiliary.org-netbeans-modules-php-smarty.smarty-framework=true
+file.reference.tests-app=tests/app
 include.path=${php.global.include.path}
 php.version=PHP_56
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=false
-test.src.dir=app
+test.src.dir=${file.reference.tests-app}
 testing.providers=PhpUnit
 web.root=web
