aggiunta protezione X-Frame-Options

--- a/src/Fi/CoreBundle/Resources/config/services.yml
+++ b/src/Fi/CoreBundle/Resources/config/services.yml
@@ -137,3 +137,7 @@ services:
         alias: fos_user.util.user_manipulator
         public: true
             
+    kernel.listener.response_listener:
+        class: Fi\CoreBundle\Listener\ResponseListener
+        tags:
+            - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse }
