--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -44,5 +44,10 @@
         <whitelist processUncoveredFilesFromWhitelist="true">
             <directory>./src</directory>
         </whitelist>
-    </filter>    
+    </filter>
+    
+    <listeners>
+        <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
+        <listener class="Symfony\Bridge\PhpUnit\CoverageListener" />
+    </listeners>   
 </phpunit>
